--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.4.1",
+    "@nuxtjs/tailwindcss": "^6.5.0",
     "nuxt": "^3.2.3"
+  },
+  "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "date-fns": "^2.29.3"
   }
 }
