--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "js-cookie": "^3.0.1"
   }
 }
